
Changes in version 1.3.3 (TBD):
* Update log from base 10 to base 2.
* ZICP is now deprecated (https://cran.r-project.org/web/packages/cplm/NEWS)
* SLM is removed in favor of a future R2 functionality for all models
* Fitted values are returned along with residuals

Changes in version 1.3.2 (08-12-2020):
* Resolve issue with x labels missing from boxplots for metadata variables without levels and increase max jpgs written. 
* Update the check for variables with more than two levels that will require a reference provided by the user for the model and the boxplots to be more strict (ignore UNK in the level count, don't check if it is a factor, and check to see if all of the levels are numeric to ignore continuous variables).
* Fix ZINB error.

Changes in version 1.3.1 (06-16-2020):
+ Add random effects capability to all the other non-LM models.
+ Add variance filtering option with default set to 0.
+ Normalization is now performed after filtering and N.not.zero is calculated on the untransformed space. Also includes minor edits to synchronize with the manuscript.
+ Add reference option required for fixed effects variables with more than two levels. Reference used in model and for boxplots.
+ Update heatmap to include all categorical levels.

Changes in version 1.1.2 (04-17-2020):
+ Small changes to pass build tests for latest bioconductor release.

Changes in version 1.1.1 (01-20-2020):
+ Updated reference to sync up with manuscript.

Changes in version 0.99.19 (2019-09-27):
+ Add figures folder of jpgs including heatmap and most significant scatter/box plots per metadata to be used in auto-generated workflow reports.

Changes in version 0.99.18 (2019-09-27):
+ For log function if x is zero use half of min value instead of one (merged changed function from Tommi Vatanen's fork).

Changes in version 0.99.17 (2019-08-20):
+ Filtering by min abundance is limited to greater than (prior was greater than and equal to)

Changes in version 0.99.16 (2019-08-05):