@@ -4,6 +4,7 @@ Changes in version 1.3.3 (TBD):
 * ZICP is now deprecated (https://cran.r-project.org/web/packages/cplm/NEWS)
 * SLM is removed in favor of a future R2 functionality for all models
 * Fitted values are returned along with residuals
+* Extracted random effects are also returned
 
 Changes in version 1.3.2 (08-12-2020):
 * Resolve issue with x labels missing from boxplots for metadata variables without levels and increase max jpgs written. 
